Update frequency-plans.mdx (#728)
* Update frequency-plans.mdx

Updated to match latest https://github.com/gradoj/hplans/blob/main/regions.csv
And added a section explaining what "Unknown" means for a frequency plan

* Update docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx

Vatican city was in under Holy See

Co-authored-by: Abhay Kumar <abhay@opensynapse.net>

Co-authored-by: Abhay Kumar <abhay@opensynapse.net>

--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -139,21 +139,28 @@ Also known as **US902-928**
 
 
 ## Frequency Plans by Country
+
+Where a frequency plan is "Unknown" it means that non of the above Frequency Plans has been known to be assigned by the local telecommnications or radio authority in that country for use by LoraWAN. People in those countries are enouraged to contact the DeWi LoRaWAN Committee via #dewi in the Helium Discord, to help initiate the LoraWAN Alliance define a frequency plan for use in your country.
+
 #### A <a id="a"></a>
 |Country                                     |Frequency Plan|
 |--------------------------------------------|--------------|
-|Afghanistan                                 |              |
+|Afghanistan                                 |Unknown       |
+|Aland Islands                               |EU868         |
 |Albania                                     |EU868         |
 |Algeria                                     |AS923_3       |
 |American Samoa                              |US915         |
 |Andorra                                     |EU868         |
-|Angola                                      |              |
+|Angola                                      |Unknown       |
 |Anguilla                                    |AU915         |
-|Antarctica                                  |              |
-|Antigua and Barbuda                         |              |
+|Antarctica - Chilean                        |AU915         |
+|Antarctica - Australian                     |AU915         |
+|Antarctica - British                        |EU868         |
+|Antarctica - Argentine                      |AU915         |
+|Antigua and Barbuda                         |Unknown       |
 |Argentina                                   |AU915         |
 |Armenia                                     |EU868         |
-|Aruba                                       |              |
+|Aruba                                       |Unknown       |
 |Australia                                   |AU915         |
 |Austria                                     |EU868         |
 |Azerbaijan                                  |EU433         |
@@ -172,15 +179,16 @@ Also known as **US902-928**
 |Bermuda                                     |US915         |
 |Bhutan                                      |EU868         |
 |Bolivia                                     |AU915         |
+|Bonaire Sint Eustatius and Saba             |EU868         |
 |Bosnia and Herzegovina                      |EU868         |
 |Botswana                                    |EU868         |
 |Bouvet Island                               |EU868         |
 |Brazil                                      |AU915         |
-|British Indian Ocean Territory              |              |
+|British Indian Ocean Territory              |Unknown       |
 |British Virgin Islands                      |AU915         |
 |Brunei                                      |AS923_1       |
 |Bulgaria                                    |EU868         |
-|Burkina Faso                                |              |
+|Burkina Faso                                |Unknown       |
 |Burundi                                     |EU868         |
 
 #### C <a id="c"></a>
@@ -189,23 +197,24 @@ Also known as **US902-928**
 |Cambodia                                    |AS923_1       |
 |Cameroon                                    |EU433         |
 |Canada                                      |US915         |
-|Cape Verde                                  |              |
+|Cape Verde                                  |EU868         |
 |Cayman Islands                              |US915         |
-|Central African Republic                    |              |
-|Chad                                        |              |
+|Central African Republic                    |Unknown       |
+|Chad                                        |Unknown       |
 |Chile                                       |AU915         |
 |China                                       |CN470         |
 |Christmas Island                            |AU915         |
 |Cocos [Keeling] Islands                     |AU915         |
 |Colombia                                    |AU915         |
 |Comoros                                     |EU868         |
-|Congo [DRC]                                 |              |
-|Congo [Republic]                            |              |
+|Congo [DRC]                                 |Unknown       |
+|Congo [Republic]                            |Unknown       |
 |Cook Islands                                |AU915         |
 |Costa Rica                                  |AS923_1       |
 |Côte d'Ivoire                               |EU868         |
 |Croatia                                     |EU868         |
 |Cuba                                        |AS923_3       |
+|Curaçao                                     |AS923_1       |
 |Cyprus                                      |EU868         |
 |Czech Republic                              |EU868         |
 
@@ -213,7 +222,7 @@ Also known as **US902-928**
 |Country                                     |Frequency Plan|
 |--------------------------------------------|--------------|
 |Denmark                                     |EU868         |
-|Djibouti                                    |              |
+|Djibouti                                    |Unknown       |
 |Dominica                                    |AU915         |
 |Dominican Republic                          |AU915         |
 
@@ -224,17 +233,17 @@ Also known as **US902-928**
 |Egypt                                       |EU868         |
 |El Salvador                                 |AU915         |
 |Equatorial Guinea                           |EU868         |
-|Eritrea                                     |              |
+|Eritrea                                     |Unknown       |
 |Estonia                                     |EU868         |
-|Eswatini [Swaziland]                        |              |
-|Ethiopia                                    |              |
+|Eswatini [Swaziland]                        |Unknown       |
+|Ethiopia                                    |Unknown       |
 
 #### F <a id="f"></a>
 |Country                                     |Frequency Plan|
 |--------------------------------------------|--------------|
 |Falkland Islands [Islas Malvinas]           |EU868         |
 |Faroe Islands                               |EU868         |
-|Fiji                                        |              |
+|Fiji                                        |Unknown       |
 |Finland                                     |EU868         |
 |France                                      |EU868         |
 |French Guiana                               |EU868         |
@@ -244,9 +253,9 @@ Also known as **US902-928**
 #### G <a id="g"></a>
 |Country                                     |Frequency Plan|
 |--------------------------------------------|--------------|
-|Gabon                                       |              |
+|Gabon                                       |Unknown       |
 |Gambia                                      |EU433         |
-|Gaza Strip                                  |              |
+|Gaza Strip                                  |Unknown       |
 |Georgia                                     |EU868         |
 |Germany                                     |EU868         |
 |Ghana                                       |EU433         |
@@ -259,13 +268,13 @@ Also known as **US902-928**
 |Guatemala                                   |AU915         |
 |Guernsey                                    |EU868         |
 |Guinea                                      |EU433         |
-|Guinea-Bissau                               |              |
+|Guinea-Bissau                               |Unknown       |
 |Guyana                                      |US915         |
 
 #### H <a id="h"></a>
 |Country                                     |Frequency Plan|
 |--------------------------------------------|--------------|
-|Haiti                                       |              |
+|Haiti                                       |Unknown       |
 |Heard Island and McDonald Islands           |AU915         |
 |Honduras                                    |AU915         |
 |Hong Kong                                   |AS923_1       |
@@ -278,7 +287,7 @@ Also known as **US902-928**
 |India                                       |IN865         |
 |Indonesia                                   |AS923_2       |
 |Iran                                        |EU868         |
-|Iraq                                        |              |
+|Iraq                                        |Unknown       |
 |Ireland                                     |EU868         |
 |Isle of Man                                 |EU868         |
 |Israel                                      |AS923_4       |
@@ -297,10 +306,10 @@ Also known as **US902-928**
 |--------------------------------------------|--------------|
 |Kazakhstan                                  |EU433         |
 |Kenya                                       |EU868         |
-|Kiribati                                    |              |
-|Kosovo                                      |              |
+|Kiribati                                    |Unknown       |
+|Kosovo                                      |EU868         |
 |Kuwait                                      |EU868         |
-|Kyrgyzstan                                  |              |
+|Kyrgyzstan                                  |Unknown       |
 
 #### L <a id="l"></a>
 |Country                                     |Frequency Plan|
@@ -309,8 +318,8 @@ Also known as **US902-928**
 |Latvia                                      |EU868         |
 |Lebanon                                     |EU868         |
 |Lesotho                                     |EU433         |
-|Liberia                                     |              |
-|Libya                                       |              |
+|Liberia                                     |Unknown       |
+|Libya                                       |Unknown       |
 |Liechtenstein                               |EU868         |
 |Lithuania                                   |EU868         |
 |Luxembourg                                  |EU868         |
@@ -321,35 +330,35 @@ Also known as **US902-928**
 |Macau                                       |AS923_1       |
 |North Macedonia                             |EU868         |
 |Madagascar                                  |EU868         |
-|Malawi                                      |              |
+|Malawi                                      |Unknown       |
 |Malaysia                                    |AS923_1       |
-|Maldives                                    |              |
+|Maldives                                    |Unknown       |
 |Mali                                        |EU433         |
 |Malta                                       |EU868         |
-|Marshall Islands                            |              |
+|Marshall Islands                            |Unknown       |
 |Martinique                                  |EU868         |
 |Mauritania                                  |EU868         |
 |Mauritius                                   |EU433         |
 |Mayotte                                     |EU868         |
 |Mexico                                      |US915         |
-|Micronesia                                  |              |
+|Micronesia                                  |Unknown       |
 |Moldova                                     |EU868         |
 |Monaco                                      |EU868         |
-|Mongolia                                    |              |
+|Mongolia                                    |Unknown       |
 |Montenegro                                  |EU868         |
 |Montserrat                                  |AU915         |
 |Morocco                                     |EU433         |
-|Mozambique                                  |              |
+|Mozambique                                  |Unknown       |
 |Myanmar [Burma]                             |AS923_1       |
 
 #### N <a id="n"></a>
 |Country                                     |Frequency Plan|
 |--------------------------------------------|--------------|
 |Namibia                                     |EU868         |
-|Nauru                                       |              |
-|Nepal                                       |              |
+|Nauru                                       |Unknown       |
+|Nepal                                       |Unknown       |
 |Netherlands                                 |EU868         |
-|Netherlands Antilles                        |              |
+|Netherlands Antilles                        |EU868         |
 |New Caledonia                               |EU868         |
 |New Zealand                                 |AU915         |
 |Nicaragua                                   |AU915         |
@@ -357,7 +366,7 @@ Also known as **US902-928**
 |Nigeria                                     |EU868         |
 |Niue                                        |AU915         |
 |Norfolk Island                              |AU915         |
-|North Korea                                 |              |
+|North Korea                                 |Unknown       |
 |Northern Mariana Islands                    |US915         |
 |Norway                                      |EU868         |
 
@@ -370,14 +379,14 @@ Also known as **US902-928**
 |Country                                     |Frequency Plan|
 |--------------------------------------------|--------------|
 |Pakistan                                    |IN865         |
-|Palau                                       |              |
-|Palestinian Territories                     |              |
+|Palau                                       |Unknown       |
+|Palestinian Territories                     |Unknown       |
 |Panama                                      |AU915         |
 |Papua New Guinea                            |AU915         |
 |Paraguay                                    |AU915         |
 |Peru                                        |AU915         |
 |Philippines                                 |AS923_3       |
-|Pitcairn Islands                            |              |
+|Pitcairn Islands                            |Unknown       |
 |Poland                                      |EU868         |
 |Portugal                                    |EU868         |
 |Puerto Rico                                 |US915         |
@@ -398,19 +407,22 @@ Also known as **US902-928**
 #### S <a id="s"></a>
 |Country                                     |Frequency Plan|
 |--------------------------------------------|--------------|
-|Saint Helena                                |              |
+|Sahrawi Arab Democratic Republic            |Unknown       |
+|Saint Barthelemy                            |EU868         |
+|Saint Helena                                |Unknown       |
 |Saint Kitts and Nevis                       |AU915         |
 |Saint Lucia                                 |AU915         |
+|Saint Martin                                |EU868         |
 |Saint Pierre and Miquelon                   |EU868         |
 |Saint Vincent and the Grenadines            |AU915         |
 |Samoa                                       |EU868         |
 |San Marino                                  |EU868         |
-|São Tomé and Príncipe                       |              |
+|São Tomé and Príncipe                       |Unknown       |
 |Saudi Arabia                                |EU868         |
 |Senegal                                     |EU868         |
 |Serbia                                      |EU868         |
 |Seychelles                                  |EU433         |
-|Sierra Leone                                |              |
+|Sierra Leone                                |Unknown       |
 |Singapore                                   |AS923_1       |
 |Slovakia                                    |EU868         |
 |Slovenia                                    |EU868         |
@@ -419,11 +431,13 @@ Also known as **US902-928**
 |South Africa                                |EU868         |
 |South Georgia and the South Sandwich Islands|EU868         |
 |South Korea                                 |KR920         |
+|South Sudan                                 |Unknown       |
 |Spain                                       |EU868         |
 |Sri Lanka                                   |AS923_1       |
-|Sudan                                       |              |
+|Sudan                                       |Unknown       |
 |Suriname                                    |AU915         |
 |Svalbard and Jan Mayen                      |EU868         |
+|Swaziland see Eswatini                      |-             |
 |Sweden                                      |EU868         |
 |Switzerland                                 |EU868         |
 |Syria                                       |EU868         |
@@ -432,26 +446,26 @@ Also known as **US902-928**
 |Country                                     |Frequency Plan|
 |--------------------------------------------|--------------|
 |Taiwan                                      |AS923_1       |
-|Tajikistan                                  |              |
+|Tajikistan                                  |Unknown       |
 |Tanzania                                    |AS923_1       |
 |Thailand                                    |AS923_1       |
-|Timor-Leste                                 |              |
+|Timor-Leste                                 |Unknown       |
 |Togo                                        |EU433         |
 |Tokelau                                     |AU915         |
 |Tonga                                       |AU915         |
 |Trinidad and Tobago                         |AU915         |
 |Tunisia                                     |EU868         |
 |Turkey                                      |EU868         |
-|Turkmenistan                                |              |
+|Turkmenistan                                |Unknown       |
 |Turks and Caicos Islands                    |AU915         |
-|Tuvalu                                      |              |
+|Tuvalu                                      |Unknown       |
 
 #### U <a id="u"></a>
 |Country                                     |Frequency Plan|
 |--------------------------------------------|--------------|
 |U.S. Minor Outlying Islands                 |US915         |
 |U.S. Virgin Islands                         |US915         |
-|Uganda                                      |IN865         |
+|Uganda                                      |AS923-1       |
 |Ukraine                                     |EU868         |
 |United Arab Emirates                        |EU868         |
 |United Kingdom                              |EU868         |
@@ -463,20 +477,21 @@ Also known as **US902-928**
 |Country                                     |Frequency Plan|
 |--------------------------------------------|--------------|
 |Vanuatu                                     |AS923_3       |
-|Vatican City                                |EU868         |
+|Vatican City (Holy See)                     |EU868         |
 |Venezuela                                   |AS923_1       |
 |Vietnam                                     |AS923_2       |
+|Virgin Islands (UK)                         |AU915         |
 
 #### W <a id="w"></a>
 |Country                                     |Frequency Plan|
 |--------------------------------------------|--------------|
 |Wallis and Futuna                           |EU868         |
-|Western Sahara                              |              |
+|Western Sahara                              |Unknown       |
 
 #### Y <a id="y"></a>
 |Country                                     |Frequency Plan|
 |--------------------------------------------|--------------|
-|Yemen                                       |              |
+|Yemen                                       |Unknown       |
 
 #### Z <a id="z"></a>
 |Country                                     |Frequency Plan|
