--- a/docs/api/blockchain/accounts.mdx
+++ b/docs/api/blockchain/accounts.mdx
@@ -1118,7 +1118,7 @@ The result will be a list of rewards between `min_time` and `max_time` both
 given in UTC. Both default to "now" which means that at least one of the two
 parameters is required.
 
-The result includes a `type` field which is the type activity that generated the
+The result includes a `type` field which is the type of activity that generated the
 reward.
 
 This route is paged using a `cursor`.
