--- a/docs/api/blockchain/accounts.mdx
+++ b/docs/api/blockchain/accounts.mdx
@@ -1183,7 +1183,7 @@ Rewards for an account with `min_time=2020-08-27&max_time=2020-08-28`
 GET https://api.helium.io/v1/hotspots/:address/rewards/:block
 ```
 
-Returns rewards for a given acount for a given block.
+Returns rewards for a given account for a given block.
 
 The result includes a `type` field which is the type of activity that generated
 the reward.
