Update link to CLI wallet documentation
Update link to Helium CLI wallet documentation

--- a/docs/wallets/app-wallet/transfer-hotspot.mdx
+++ b/docs/wallets/app-wallet/transfer-hotspot.mdx
@@ -141,7 +141,7 @@ The Buyer pays for the transaction fee.
 ### Is this available on the CLI?
 
 Yes. Wallet CLI is available for this feature.
-https://developer.helium.com/blockchain/blockchain-cli
+[Helium CLI Wallet Documentation](/wallets/cli-wallet)
 
 ### Can I change the price after sending the transfer to the Buyer, but BEFORE they accept?
 
