Fix JSON Naming Issues
Updated score to reward_scale and removed scoreUpdateHeight as it is no longer returned by API.

--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -82,8 +82,7 @@ Hotspots successfully retrieved.
         "online": "online",
         "height": 391690
       },
-      "score_update_height": 395502,
-      "score": 0.25,
+      "reward_scale": 0.25,
       "owner": "13wv9QctMFJqQpvbZq8GuwaKc7YxUuvMw6WQD5JouvB3L2kuGwT",
       "nonce": 1,
       "name": "keen-metal-halibut",
@@ -111,8 +110,7 @@ Hotspots successfully retrieved.
         "online": "online",
         "height": 396910
       },
-      "score_update_height": 396984,
-      "score": 0.2593841552734375,
+      "reward_scale": 0.2593841552734375,
       "owner": "131uuuyiYrPczy1aCKDBhvxYTG7ZMNfnZnKgemesd3CZEe3y6EU",
       "nonce": 2,
       "name": "nutty-daffodil-ferret",
@@ -190,8 +188,7 @@ _Path Parameters_
     "name": "tall-plum-griffin",
     "nonce": 1,
     "owner": "14e35CChhsnuHJxjjzYAxsHKBKDgjUop4GuD8esB7gE2VDoyPXT",
-    "score": 0.25,
-    "score_update_height": 395577,
+    "reward_scale": 0.25,
     "status": {
       "height": 394065,
       "online": "offline"
@@ -257,8 +254,7 @@ _Path Parameters_
       "name": "tall-plum-griffin",
       "nonce": 1,
       "owner": "14e35CChhsnuHJxjjzYAxsHKBKDgjUop4GuD8esB7gE2VDoyPXT",
-      "score": 0.25,
-      "score_update_height": 395577,
+      "reward_scale": 0.25,
       "status": {
         "height": 394065,
         "online": "offline"
