--- a/docs/troubleshooting/witnesses.mdx
+++ b/docs/troubleshooting/witnesses.mdx
@@ -20,8 +20,16 @@ Beacons happen automatically, and Hotspots witness automatically. Successful Wit
 
 :::
 
-## Witness List in Explorer and Helium App
-The list you find in explorer.helium.com and the Helium app are a historical, cumulative set of Hotspots that have witnessed your Hotspot emit a Beacon. This list is based on 5 previous days of Proof-of-Coverage <a href="https://docs.helium.com/blockchain/blockchain-primitives/#transactions">receipts</a>.
+## Witnessed List in Explorer and Helium App
+
+:::info
+
+As of January 2022, Witnessed Lists in both the App and Explorer reflects the list of Hotspots that your Hotspot has seen beacon. This is an improved change from displaying a list of Hotspots that has witnessed your Hotspot as the new list directly correlates with mining rewards.
+
+:::
+
+The list you find in explorer.helium.com and the Helium app are a historical, cumulative set of Hotspots that your Hotspot has seen beacon. This list is based on 5 previous days of Proof-of-Coverage <a href="https://docs.helium.com/blockchain/blockchain-primitives/#transactions">receipts</a>. 
+
 
 Here is an example:
 
@@ -47,6 +55,12 @@ Witnesses are *historical and informational only*. It is not indicative of futur
 
 :::
 
+### Transmit Scale and Witnessed List
+Typically, the more Hotspots in your witnessed list, the more likely you'll have higher mining rewards. This is heavily influenced by the transmit scale of the Hotspots you witness.
+
+In the App, for any Hotspot, tap on Hotspots Witnessed and you'll find the average transmit scale of all Hotspots in that list. The higher the transmit scale, the higher the rewards. This is why it's important to optimize your antenna placement so it can witness Hotspots in lesser populated areas and higher transmit scales.
+
+   <img src={useBaseUrl("img/troubleshooting/witnessed.jpg")} />
 
 ### Witness List Resets 
 Any time a Hotspot updates its location, antenna, or elevation, the list automatically resets. This does not affect earnings.
@@ -98,9 +112,11 @@ Visit the <a href="https://docs.helium.com/troubleshooting/network-troubleshooti
 # FAQ
 **My Hotspot went from x witnesses to y! What's wrong? I didn't do anything!**
 
-This is normal! The witnesses in the list is a historical summary of who has witnessed a beacon recently. This number can vary day to day and only Hotspots that sent receipts back to the challenger in a timely manner is included.
+This is normal! The witnesses in the list is a historical summary of who your Hotspot has witnessed. This number can vary day to day and only Hotspots that sent receipts back to the challenger in a timely manner is included.
 
 **My witnesses dropped to zero! Will this affect my earnings?**
 
 Witnesses reset when a Hotspot updates its location, antenna dBi, or elevation. There is nothing to be concerned about and this will not affect your earnings. Keep in mind that as the network grows, the rewards going to each Hotspot goes lower day over day. 
+
+However, if your Witnessed List is consistently zero without updating your location, antenna gain, or elevation, check your internet connection, that the Hotspot is online, and that there are no obsctructions in the way of the antenna. 
 
