--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -122,7 +122,7 @@ earn $HNT.
 ### Milestone 2: Earn HNT For Device Packet Transfer
 
 - Target Completion: Fall 2021
-- Status: Development Complete (Oct 11, 2021)
+- Status: COMPLETE
 
 Data Only Hotspots will earn $HNT for device data transfer. 
 
