Removed the second full stop in the last sentence
"as Helium is not involved.." has been changed to "as Helium is not involved."

--- a/docs/troubleshooting/hotspot-setup.mdx
+++ b/docs/troubleshooting/hotspot-setup.mdx
@@ -72,4 +72,4 @@ Hosting program where you host the Hotspot for someone else.
 
 If you signed up to be a host, you would need to contact the entity you signed
 up through for any information regarding your arrangement or rewards, as Helium
-is not involved..
+is not involved.
