--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -109,6 +109,7 @@ Additionally, any pricing details listed here are likely to be out of date. Plea
 | [Allnodes](https://www.allnodes.com)                         | Yes                     | No          | $80 per month (Basic) or $0.2380 per hour (Advanced)                |
 | [Argon.build](https://www.argon.build)                       | Yes                     | No          | 3% comission on earnings                                     |
 | [Bison Trails](https://www.bisontrails.co)                   | Yes                     | No          |                                                                     | Does not offer service to individuals who plan to run fewer than 10 nodes
+| [Blockdaemon](https://blockdaemon.com/)                      | Yes                     | No          | 5% commission with flexible payment options                         | Cloud offerings.
 | [Chorus One](https://chorus.one/products/whitelabel-staking) | Yes                     | No          |                                                                     | Does not have public pricing.
 | [DLI](https://dlinodes.com)                                  | Yes                     | Yes         | All run in DLI Cloud, Staking, Nodes, 24/7 Support                  |
 | [Figment](https://figment.io/)                               | Yes                     | No          | 5% comission                                                        |
@@ -124,5 +125,3 @@ Additionally, any pricing details listed here are likely to be out of date. Plea
 | [StakeMyHNT](https://www.stakemyhnt.com)                     | Yes                     | Coming soon | $169 per month                                                      |
 | [Validators Pool](https://helium.bx-host.com)                | Yes                     | No          | $120 per month + 2% comission on earnings                           |
 | [Vanager](https://vanager.io)                                | No                      | Yes         | $4 per day + 3% comission on earnings                               |
-| [BlockDaemon](https://blockdaemon.com/)                      | Yes                     | No          | 5% commission with flexible payment options                         | Cloud offerings.
-
