Rewriting as a more general statement.
Thanks @lthiery

Co-authored-by: Louis Thiery <louis@helium.com>

--- a/docs/community-governance/community-voting.mdx
+++ b/docs/community-governance/community-voting.mdx
@@ -11,7 +11,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 # Voting on Helium
 In order to approve or deny changes to the blockchain, economics, or governance of the Helium Network; Helium and DeWi leverage on-chain voting which is open to the entire community. This on-chain voting is currently facilited through the website [helium.vote](https://helium.vote). 
 
-For most votes, voting power is currently determined by the HNT balance of the voting wallets at a rate of one vote per HNT. However, voting power may change vote-to-vote, depending on what the community is reaching consensus on. As example, a vote on AU915 may only concern Hotspots in Australia and use Hotspots as votes. Proposals to implement more involved voting mechanisms have been presented, but have not been voted on or implemented yet. See: [HIP41](https://github.com/helium/HIP/blob/master/0041-governance-by-token-lock-v2.md)
+For most votes, voting power is currently determined by the HNT balance of the voting wallets at a rate of one vote per HNT. However, voting power may change vote-to-vote, depending on what the community is reaching consensus on. As example, a vote on on frequency plan for a region would only concern Hotspots in the region and one would use number Hotspots in the region as votes. Proposals to implement more involved voting mechanisms have been presented, but have not been voted on or implemented yet. See: [HIP41](https://github.com/helium/HIP/blob/master/0041-governance-by-token-lock-v2.md)
 
 HNT holders are able to vote by issuing a small token burn transaction from their wallet to a wallet associated with a particular ballot option, typically `For` or `Against`. Voting just a portion of a wallet's balance is not supported.
 
