--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -25,7 +25,7 @@ No.
 
 **How many validators are elected to the consensus group?**
 
-Initially 49, but expect to quickly grow the number.
+Currently 43, but anticipate number will increase, check block explorer for latest conensus group size.
 
 **When a validator is in the consensus group can I update it?**
 
