--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -25,7 +25,7 @@ No.
 
 **How many validators are elected to the consensus group?**
 
-Initially 49, but expect to quickly grow the number.
+Currently 43. Check the [block explorer](https://explorer.helium.com/validators) for latest consensus group size.
 
 **When a validator is in the consensus group can I update it?**
 
