Adds Wio Terminal

--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -80,6 +80,8 @@ There are a wide variety of ways to get involved depending on your level of comf
 Fully managed mapping devices are ready to use as soon as they arrive.  These are pre-configured and enrolled by the seller, and not your own Helium Console.  The Data Credits are provided by the seller, and the devices have pre-selected back-end Integrations that are not user-configurable.  Generally, these devices are the most easy and accessible, requiring just power to start mapping.
 * IoWe Coverage Mapper
     * [Product page](https://www.internetofwe.net/product-page/helium-coverage-mapper)
+* Wio Terminal LoRaWAN Field Tester
+    * [Product page](https://www.seeedstudio.com/WioField-Tester-Kit-p-5282.html)
 
 ### Plug & Play
 Console-ready device that you onboard to spend your own Data Credits.
