--- a/docs/use-the-network/devices/development/arduino/portenta-h7-with-lora-vision-shield/arduino.mdx
+++ b/docs/use-the-network/devices/development/arduino/portenta-h7-with-lora-vision-shield/arduino.mdx
@@ -39,7 +39,9 @@ For this example, you will need the following:
 - [LoRa Vision Shield](https://store-usa.arduino.cc/products/arduino-portenta-vision-shield-lora%C2%AE)
 - Micro USB Type B Cable -
   [Example](https://www.amazon.com/AmazonBasics-Male-Micro-Cable-Black/dp/B0719H12WD/ref=sr_1_2_sspa?)
-
+- U.FL connector for your region. this example will use the US915MHz Antenna 
+  [Example: U.FL IPEX to SMA Connector Antenna 915MHz for Lora Board](https://www.amazon.com/DIYmall-Connector-Antenna-915MHz-Lora32u4/dp/B084KVYBH5)
+  
 ### Software
 
 - [Arduino software \(IDE\)](https://www.arduino.cc/en/Main/Software) Old stable version ~Arduino IDE 1.8.19 or new version ~2.0  
@@ -47,27 +49,13 @@ For this example, you will need the following:
 
 ## Hardware Setup
 
-This step will cover adding an antenna and closing the LoRaWAN jumpers on this
-board.
+This step will cover adding an antenna to the LoRa Vision Shield.
 
 ### Adding the Antenna
 
-Please visit Adafruit's Documentation for antenna options and instructions
-[here](https://learn.adafruit.com/adafruit-feather-m0-radio-with-lora-radio-module/antenna-options).
+The uFL connector is just a push fit on the LoRa board, not the main Portenta board (That uFL connector is for WiFi and BLE). 
+Try not to have to remove and replace the antenna very often. the uFL connectors are rated for 30 connection cycles, but be careful when connecting/disconnecting to not rip the pads off the PCB
 
-### Jumping IO1 to Pin6
-
-In order to use the RFM95 radio module onboard the Feather M0 for LoRaWAN we'll
-need to connect two pins together. The pins are labeled io1 and 6 on the board,
-as shown below. If you have the headers soldered on, you can use a female to
-female jumper cable to connect them, or you can simply solder a wire from pin to
-pin.
-
-<img
-  src={useBaseUrl(
-    "img/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95/adafruit-feather-m0-rfm95-jumper-pins.jpg"
-  )}
-/>
 
 ## Software Setup
 
@@ -82,44 +70,25 @@ Download and install the latest version of
 
 ### Arduino Board Support
 
-The Adafruit Feather M0 requires two Arduino board support packages. Follow the
-instructions below to install both.
+The Portenta H7 requires one Arduino board support package. Follow the
+instructions below to install it.
 
 #### Arduino SAMD Boards \(32-bits ARM Cortex-M0+\)
 
 To install, open your Arduino IDE:
 
 1. Navigate to \(**Tools &gt; Boards &gt; Boards Manager...\)**
-2. Search for **Arduino SAMD Boards \(32-bits ARM Cortex-M0+\)**
+2. Search for **Arduino Mbed OS Portenta Boards**
 3. Select the newest version and click Install
 
-#### Adafruit SAMD Boards
-
-To install, open your Arduino IDE:
-
-1. Navigate to **\(File &gt; Preferences\), \(Arduino &gt; Preferences\) on
-   MacOS.**
-2. Find the section at the bottom called **Additional Boards Manager URLs:**
 
 <img
   src={useBaseUrl(
-    "img/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95/adafruit-feather-m0-rfm95-arduino-pref.png"
+    "img/use-the-network/devices/development/arduino/portenta/mbed-board-install.png"
   )}
 />
 
-1. Add this URL in the text box:
 
-```text
-https://adafruit.github.io/arduino-board-index/package_adafruit_index.json
-```
-
-1. Close the Preferences windows
-
-Next, to install this board support package:
-
-1. Navigate to \(**Tools &gt; Boards &gt; Boards Manager...\)**
-2. Search for **Adafruit SAMD Boards**
-3. Select the newest version and click Install
 
 ### Arduino Library
 
@@ -130,27 +99,16 @@ To install, open your Arduino IDE:
 
 1. Navigate to Library Manager \(**Sketch &gt; Include Library &gt; Manage
    Libraries**\).
-2. In the search box, type **IBM LMIC framework** into the search, select the
-   version shown below, and click Install.
+2. In the search box, type **community** into the search, select the **portenta-pro-community-solutions** library latest
+   version see image below, and click Install.
 
 <img
   src={useBaseUrl(
-    "img/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95/adafruit-feather-m0-rfm95-arduino-add-library.png"
+    "img/use-the-network/devices/development/arduino/portenta/portenta-pro-community-solutions-library-install.png"
   )}
 />
 
-#### Update IBM LMIC framework config.h
 
-This library requires that a config file be setup properly. After you have
-installed the `IBM LMIC framework` library, navigate to it's directory on your
-operating system found below. Next, replace the `config.h` file in this
-directory with this
-[config.h](https://github.com/helium/longfi-arduino/blob/master/Adafruit-Feather-M0-RFM95/longfi-us915/config.h)
-file.
-
-linux: /home/{user}/Arduino/libraries/IBM_LMIC_framework/src/lmic  
-windows: Documents/Arduino/libraries/IBM_LMIC_framework/src/lmic  
-mac os: Documents/Arduino/libraries/IBM_LMIC_framework/src/lmic
 
 ### Programming Example Sketch
 
@@ -159,52 +117,42 @@ program the board with the provided example sketch.
 
 To create a new Arduino sketch, open your Arduino IDE, \(**File &gt; New\).**
 Next, replace the template sketch with the sketch found
-[here](https://github.com/helium/longfi-arduino/blob/master/Adafruit-Feather-M0-RFM95/longfi-us915/longfi-us915.ino),
-copy and paste the entirety of it.
+[here](https://github.com/hpssjellis/portenta-pro-community-solutions/blob/main/examples/dot3-portenta-vision-shields/dot33-lorawan-specific/dot334-proof-us915-helium-connect.ino),
+copy and paste the entirety of it or if you have the Portenta-pro-community-solutions library just find example dot334-proof-us915-helium-connect.ino
 
-Next we'll need to fill in the AppEUI\(lsb\), DevEUI\(lsb\), and AppKey\(msb\),
-in the sketch, which you can find on the device details page on Console. Be sure
-to use the formatting buttons to match the endianess and formatting required for
-the sketch, shown below.
+Next we'll need to fill in the SECRET_APP_EUI\(lsb\), and SECRET_APP_KEY\(msb\), written exactly as you see them from the [Helium Console](https://console.helium.com/)
+Note: On these boards the deviceEUI is fixed per board, so you will have to run the code once, view in the serial monitor what your boards deviceEUI is and enter that in the Helium Console. (the Helium console will randomly give you a deviceEUI (the top one in the list) but you must reset it)
 
-<img
-  src={useBaseUrl(
-    "img/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95/adafruit-feather-m0-rfm95-console-keys.png"
-  )}
-/>
-
-At the top of the sketch, replace the three **FILL_ME_IN** fields, with the
-matching field from Console, example shown below.
 
 <img
   src={useBaseUrl(
-    "img/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95/adafruit-feather-m0-rfm95-arduino-sketch-keys.png"
+    "img/use-the-network/devices/development/arduino/portenta/helium-keys.png"
   )}
 />
+
 
 ### Selecting Board
 
 Next, we need to select the correct board to build for in the Arduino IDE.
-Navigate to \(**Select Tools &gt; Board: &gt; Adafruit Feather M0\).**
+Navigate to \(**Select Tools &gt; Board: &gt; Arduino Mbed OS Portenta Boards &gt; Arduino Portenta H7 \(M7 Core\) \).**
+
 
 ### Enter Bootloader Mode
 
 Next, we need to place the board into bootloader mode, which allows us to update
 it with new firmware. To do this, first plug the device into your computer, make
-sure the power switch is turned on \(you should see a red LED on\). Next,
+sure the board is getting power \(you should see a green LED on\). Next,
 quickly double click the reset push button on the top side of the board, you
-should see the red LED slowly blink. If you see this then you have successfully
+should see the green LED slowly blink about one blink per second. If you see this then you have successfully
 entered bootloader mode.
 
 ### Selecting Port
 
 We're almost ready to upload our sketch, the very last step is to select the
 correct Serial port in the Arduino IDE. Navigate to \(**Tools &gt; Port:
-Adafruit Feather M0**\). You will also see either **COM\# or /dev/ttyACM\#**
+Arduino Portenta**\). You will also see either **COM\# or /dev/ttyACM\#**
 depending on whether you are on Windows, Mac, or Linux. If you do not see a
-port, please visit the Drivers section in
-[Adafruit's Docs](https://learn.adafruit.com/adafruit-feather-m0-radio-with-lora-radio-module/using-with-arduino-ide#install-drivers-windows-7-and-8-only-6-11)
-to make sure you have what's needed for your operating system.
+port, you will need to check if the Arduino drivers have been installed.
 
 ### Upload Sketch
 
@@ -215,7 +163,7 @@ image below at the bottom of your Arduino IDE, when the upload is successful.
 
 <img
   src={useBaseUrl(
-    "img/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95/adafruit-feather-m0-rfm95-arduino-terminal.png"
+    "img/use-the-network/devices/development/arduino/portenta/upload-success.png"
   )}
 />
 
@@ -225,14 +173,13 @@ When your firmware update completes, the board will reset, and begin by joining
 the network. Let's use the Serial Monitor in the Arduino IDE to view the output
 from the board. We first need to select the serial port again, but this time it
 will be a **different port** than the one we selected to communicate with the
-bootloader. Once again, navigate to \(**Tools &gt; Port: Adafruit Feather
-M0**\), but make sure the serial device, either COM\# or ttyACM\#, is different!
+bootloader. Once again, navigate to \(**Tools &gt; Port: Arduino Portenta**\), but make sure the serial device, either COM\# or ttyACM\#, is different!
 Next navigate to \(**Tools &gt; Serial Monitor**\), you should begin to see
 output similar to below.
 
 <img
   src={useBaseUrl(
-    "img/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95/adafruit-feather-m0-rfm95-arduino-serial.png"
+    "img/use-the-network/devices/development/arduino/portenta/serial-monitor-output.png"
   )}
 />
 
@@ -241,10 +188,14 @@ our device page, you should see something similar to the screenshot below.
 
 <img
   src={useBaseUrl(
-    "img/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95/adafruit-feather-m0-rfm95-console-event-graph.png"
+    "img/use-the-network/devices/development/arduino/portenta/helium-console-debug.png"
   )}
 />
 
 Congratulations! You have just transmitted data on the Helium network! The next
 step is to learn how to use your device data to build applications, visit our
 Integrations docs [here](/use-the-network/console/integrations).
+
+
+
+
