--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -15,7 +15,7 @@ migration, we have introduced a new Hotspot variant onto the network, called
 a [Data Only Hotspot](/mine-hnt/data-only-hotspots). More details on progress
 and timeline are listed below.
 
-This project is in progress and subject to change. **Last updated Wednesday December 6, 2021**.
+This project is in progress and subject to change. **Last updated Monday January 31, 2022**.
 
 :::info
 
@@ -172,13 +172,18 @@ At this stage, there will be three types of Hotspots:
 ### Milestone 4: Software Update to Existing Hotspots to transform them into Light Hotspots
 
 - Target Completion: Q1 2022
-- Status: Development in Progress
+- Status: Development in progress
 
 Approved Hotspots on the Network will be converted
 to run [gateway-rs](https://github.com/helium/gateway-rs) and will be dependent
 on Validators to generate challenges and process witness receipts.
 
-Hotspots will not need to follow the Blockchain.
+#### What's on Testnet?
+Software-based miners are receiving block information and challenges from validators. These software-based miners are participating in Proof-of-Coverage. See them in action on testnet-explorer.helium.com
 
-Work on Milestone 4 has already started, please see **Path to Milestone 3 and 4** above.
+Next: 
+- Run Light Hotspot software on Hotspot Hardware (Helium Hotspots and other Maker Hotspots) on testnet
 
+
+#### What's on mainnet?
+2 testing Hotspots will receive an update on Mainnet that routes non-PoC packets using the Light Hotspot code. 
